fix: fixed space between cards and overflow on cards

--- a/styles/custom-css/contact-us.css
+++ b/styles/custom-css/contact-us.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
 .nav-link.active {
   text-decoration: none;
   border-bottom: 3px solid #084482;
@@ -8,10 +14,17 @@
   background-size: cover;
 }
 
+.text{
+  font-style: normal;
+  font-weight: normal;
+  font-size: 40px;
+  line-height: 47px;
+}
+
 .hero-overlay{
   position: relative;
   width: 100%;
-  height: 43.5rem;
+  height: 448px;
   top: 0;
   left: 0;
   right: 0;
@@ -22,7 +35,7 @@
 }
 .cards{
   position: relative;
-  top: -3rem;
+  top: 2rem;
 }
 .card{
   border-radius: 10px !important;
@@ -85,7 +98,7 @@ border: 1px solid #C5C5C5 !important;
   }
   .spacer {
     padding: 4rem 0;
-    height: 40rem;
+    height: 44rem;
   }
 }
 
@@ -93,24 +106,27 @@ border: 1px solid #C5C5C5 !important;
 .text {
   font-size: 1.5rem;
   font-weight: 100;
+  line-height: 1rem;
 }
 .hero-overlay {
-    height: 13rem;
+    height: 11.8rem;
+    background-color: rgba(10, 10, 11, 0.75);
 }
 .hero {
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  height: 13rem;
+  height: 11.8rem;
+
 }
 
 .cards {
   position: relative;
-  top: .1rem;
+  top: .2rem;
 }
 .spacer {
   padding: 4rem 0;
-  height: 40rem;
+  height: 44rem;
 }
 }
 
@@ -125,7 +141,7 @@ border: 1px solid #C5C5C5 !important;
     height: 360px;
   }
   .card{
-    max-width: calc(33% - 5px);
+    max-width: calc(33% - 15px);
       position: relative;
       top: 0rem;
   }
